tests/max_encoded_len_ui/no_path_list_items.stderr
error: expect: #[max_encoded_len_mod(path::to::crate)]
 --> $DIR/no_path_list_items.rs:4:3
  |
4 | #[max_encoded_len_mod]
  |   ^^^^^^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `max_encoded_len` found for struct `Example` in the current scope
 --> $DIR/no_path_list_items.rs:8:19
  |
5 | struct Example;
  | --------------- function or associated item `max_encoded_len` not found for this
...
8 |     let _ = Example::max_encoded_len();
  |                      ^^^^^^^^^^^^^^^ function or associated item not found in `Example`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `max_encoded_len`, perhaps you need to implement it:
          candidate #1: `MaxEncodedLen`
